--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -4,10 +4,10 @@
 // Destructure props with default values.
 // These can be overridden on a per-page basis.
 const {
-  title = "Professional Photographer Red Oak & Waxahachie TX",
-  description = "Casey Lewis Photography for all your family, professional headshots, portrait, and real estate photography needs. I look forward to working with you!",
-  ogImage = "https://uploads-ssl.webflow.com/6255f941c2bbb613a84ec911/625b891e3ec675f46dddb5c1_Open%20Graph%20Image%400.75x.jpg",
-  canonical = "https://www.caseylewisphotography.com",
+  title = "PopCandi AI | Your Always On Recruiting Platform",
+  description = "PopCandi.ai delivers qualified, interested, and ready-to-hire candidates before you even post a role—turning months-long searches into weeks.",
+  ogImage = "",
+  canonical = "https://www.popcandi.com",
   twitterTitle = title,
   twitterDescription = description,
   twitterImage = ogImage,
@@ -55,19 +55,6 @@ const {
 </noscript>
 
 <!-- Google tag (gtag.js) -->
-<script
-  async
-  src="https://www.googletagmanager.com/gtag/js?id=G-T7MXGP5DS9"
-  is:inline></script>
-<script is:inline>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-
-  gtag("config", "G-T7MXGP5DS9");
-</script>
 
 <!-- GSAP SCRIPTS -->
 <script
