--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -10,7 +10,7 @@
   background-image: radial-gradient(
     circle farthest-corner at 50% -120%,
     #3e60b1 31%,
-    var(--theme-background--dark) 75%
+    var(--theme-bg--dark) 75%
   );
 }
 
@@ -19,217 +19,11 @@
 /* hero component */
 
 .home-hero__component {
-  grid-gap: var(--grid-gap-standard);
+  grid-gap: var(--gap-standard);
 }
 
 /* content wrapper */
 
 .home-hero__content-wrapper {
   max-width: 65ch;
-}
-
-.home-hero.button-wrapper-group {
-  width: 100%;
-  justify-content: center;
-}
-
-/* image grid */
-
-.home-hero__image-grid {
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 0.25rem;
-  align-items: center;
-  overflow-x: hidden;
-  justify-content: center;
-}
-
-.home-hero__stacked-image-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.home-hero__image {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  /* max-width: none; */
-}
-
-/* ========== Quote Section ========= */
-
-.home-quote__component {
-  max-width: 56rem;
-  margin: 0 auto;
-}
-
-.home-quote__text {
-  font-weight: 100;
-}
-
-/* ========== Headshot Section ========= */
-
-.home-headshot__component.grid-2 {
-  align-items: center;
-}
-
-.home-headshot__image-wrapper.u-visual-wrap {
-  aspect-ratio: 3/4;
-}
-
-.home-headshot__image.u-visual {
-  object-position: center 80%;
-}
-
-/* ========== Commercial Section ========= */
-
-.home-commercial__component.grid-2 {
-  align-items: center;
-  grid-template-columns: 1.75fr 1fr;
-}
-
-.home-commercial__image-wrapper.u-visual-wrap {
-  aspect-ratio: 1/1;
-}
-
-@media screen and (max-width: 1010px) {
-  .home-commercial__component.grid-2 {
-    align-items: center;
-    grid-template-columns: 1fr;
-  }
-  .home-commercial__content-wrapper {
-    order: -1;
-  }
-}
-
-/* ========== Experience Section ========= */
-
-.home-experience__card-component {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 2rem;
-  border-style: solid;
-  border-color: var(--border-color-light);
-  border-width: var(--border-width-main);
-  border-radius: var(--radius-main);
-  text-align: center;
-}
-
-.card__text {
-  margin-top: auto;
-}
-/* ========== Results Section ========= */
-
-.home-results__heading-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.home-results__image-wrapper.u-visual-wrap {
-  aspect-ratio: 13.12/7.38;
-}
-
-/* ========== Difference Section ========= */
-
-/* Paragraph */
-
-.home-difference__paragraph {
-  max-width: 32rem;
-}
-
-/* Image Grid Component */
-.home-difference__image-component.grid-3 {
-  gap: var(--grid-gap-1rem);
-}
-
-/* Mobile iPad */
-@media screen and (max-width: 991px) {
-  .home-difference__image-component.grid-3 {
-    grid-template-columns: var(--grid-3);
-  }
-}
-
-/* Mobile Landscape */
-@media screen and (max-width: 767px) {
-  .home-difference__image-component.grid-3 {
-    grid-template-columns: var(--grid-3);
-  }
-}
-
-/* Image Wrapper for each column */
-.home-difference__stacked-image-wrapper {
-  display: flex;
-  flex-direction: column;
-  row-gap: var(--grid-gap-1rem);
-}
-/* Aspect Ratio Square Images */
-.home-difference__image-wrapper.u-visual-wrap.is-1,
-.home-difference__image-wrapper.u-visual-wrap.is-2,
-.home-difference__image-wrapper.u-visual-wrap.is-5,
-.home-difference__image-wrapper.u-visual-wrap.is-6,
-.home-difference__image-wrapper.u-visual-wrap.is-7 {
-  aspect-ratio: 4.16/4.16;
-}
-
-/* Aspect ration Landscape Images */
-.home-difference__image-wrapper.u-visual-wrap.is-3,
-.home-difference__image-wrapper.u-visual-wrap.is-4 {
-  aspect-ratio: 4.16/2.34;
-}
-
-/* Image */
-.home-difference__image {
-  width: auto;
-  height: auto;
-  object-fit: cover;
-}
-
-/* ========== Process Section ========= */
-
-.home-process__heading-wrapper {
-  gap: 2rem;
-}
-
-.home-process__layout {
-  /* display: flex;
-  flex-wrap: wrap;
-  gap: 3rem;
-  justify-content: start; */
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: var(--grid-gap-1rem);
-}
-
-.home-process__card {
-  /* flex: 1 1 300px;*/
-  /* max-width: 405px; */
-  width: 100%;
-  background-color: var(--theme-background--dark-2);
-  padding: 2rem;
-  border-radius: var(--radius-main);
-}
-
-.home-process__card-number {
-  margin-bottom: 0.75rem;
-}
-
-.home-process__card-heading {
-  margin-bottom: 1.5rem;
-}
-
-/* Media Queries */
-
-@media screen and (max-width: 900px) {
-  .home-process__layout {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .home-process__heading-wrapper {
-    flex-direction: column;
-  }
 }
