--- a/src/styles/variables/colors.css
+++ b/src/styles/variables/colors.css
@@ -9,17 +9,17 @@
   --color-brand-black: #0e0e0e;
   --color-brand-black-o20: color-mix(
     in srgb,
-    var(--color-brand--black) 20%,
+    var(--color-brand-black) 20%,
     transparent
   );
   --color-brand-black-o50: color-mix(
     in srgb,
-    var(--color-brand--black) 50%,
+    var(--color-brand-black) 50%,
     transparent
   );
   --color-brand-black-o75: color-mix(
     in srgb,
-    var(--color-brand--black) 75%,
+    var(--color-brand-black) 75%,
     transparent
   );
 
@@ -27,17 +27,17 @@
   --color-brand-white: #f8f8f8;
   --color-brand-white-o20: color-mix(
     in srgb,
-    var(--color-brand--white) 20%,
+    var(--color-brand-white) 20%,
     transparent
   );
   --color-brand-white-o50: color-mix(
     in srgb,
-    var(--color-brand--white) 50%,
+    var(--color-brand-white) 50%,
     transparent
   );
   --color-brand-white-o75: color-mix(
     in srgb,
-    var(--color-brand--white) 75%,
+    var(--color-brand-white) 75%,
     transparent
   );
 
@@ -84,9 +84,9 @@
 
   /* Background - Dark */
 
-  --theme-bg--dark: var(--color-brand-dark-1);
-  --theme-bg--dark-2: var(--color-brand-dark-2);
-  --theme-bg--dark-3: var(--color-brand-dark-3);
+  --theme-bg-dark: var(--color-brand-dark-1);
+  --theme-bg-dark-2: var(--color-brand-dark-2);
+  --theme-bg-dark-3: var(--color-brand-dark-3);
 
   /* Background - Gradient */
 
