--- a/src/components/CTASection.astro
+++ b/src/components/CTASection.astro
@@ -11,13 +11,16 @@ import ctaImage from "../assets/cta-image.avif";
       <div
         class="cta__content-wrapper display-flex flex-direction-column justify-content-center"
       >
-        <div class="cta__heading heading-h2 margin-heading" data-splittext>
+        <h2 class="cta__heading heading-h2 margin-heading" data-splittext>
           Ready to Transform Your Hiring Process?
-        </div>
-        <div class="cta__paragraph margin-paragraph" data-fade-in>
-          Stop waiting months for maybe. Start meeting qualified executives this
-          week.
-        </div>
+        </h2>
+        <p
+          class="cta__paragraph text-size-medium margin-paragraph"
+          data-fade-in
+        >
+          <span class="text-style-bold">Stop waiting months for maybe.</span> Start
+          meeting qualified executives this week.
+        </p>
         <div class="cta button-wrapper-group" data-fade-up>
           <Button href="/contact">Book a Session</Button>
         </div>
