--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -38,8 +38,8 @@ body {
   line-height: 1.5;
   font-family: var(--font-primary);
   color: var(--theme-text-dark);
-  background-color: var(--theme-background--dark);
-  text-transform: var(--_text-style---text-transform);
+  background-color: var(--theme-bg-light);
+  text-transform: var(--text-transform-inherit);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
@@ -52,9 +52,9 @@ body {
 */
 img,
 picture {
-  max-width: 100%;
   display: block;
-  height: auto;
+  max-width: 100%;
+  height: 100%;
 }
 
 /* Inherit fonts for inputs and buttons */
