--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 import Image from "astro/components/Image.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import TestimonialsSilder from "../components/TestimonialsSilder.astro";
-import CTASection from "../components/CTASection.astro";
+import CTASectionImage from "../components/CTASectionImage.astro";
 import FAQ from "../components/FAQ.astro";
 // Styles
 import "../styles/pages/home.css";
@@ -19,7 +19,7 @@ import portraitOfCasey from "../assets/casey-lewis-owner-casey-lewis-photography
       <!-- Home Hero - Component -->
 
       <!-- CTA -->
-      <CTASection />
+      <CTASectionImage />
       <!-- FAQ Component -->
       <FAQ />
     </div>
