--- a/src/styles/variables/layout.css
+++ b/src/styles/variables/layout.css
@@ -21,6 +21,7 @@
   --gap-4rem: 4rem;
   --gap-3rem: 3rem;
   --gap-2rem: 2rem;
+  --gap-1-5rem: 1.5rem;
   --gap-1rem: 1rem;
   --gap-0-5rem: 0.5rem;
 
