--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -59,7 +59,7 @@ import Button from "./Button.astro";
     align-items: center;
     /* background-color: var(--color-neutral-darkest); */
     background-color: transparent;
-    height: 6rem; /* Fixed height to allow for sticky positioning */
+    /* height: 6rem; Fixed height to allow for sticky positioning */
     padding: 0 4.8rem;
     position: relative;
     z-index: 1;
