--- a/src/styles/base/layout.css
+++ b/src/styles/base/layout.css
@@ -180,6 +180,10 @@
   gap: var(--gap-0-5rem);
 }
 
+.gap-0-25rem {
+  gap: var(--gap-0-25rem);
+}
+
 /* =================================================
        MARGIN UTILITIES
    ================================================= */
