--- a/src/styles/variables/layout.css
+++ b/src/styles/variables/layout.css
@@ -24,6 +24,7 @@
   --gap-1-5rem: 1.5rem;
   --gap-1rem: 1rem;
   --gap-0-5rem: 0.5rem;
+  --gap-0-25rem: 0.25rem;
 
   /* GAP STANDARD - Responsive */
   @media screen and (max-width: 991px) {
